--- a/LeetCodePart1/LeetCodePart1/LeetCodePart1.vcxproj
+++ b/LeetCodePart1/LeetCodePart1/LeetCodePart1.vcxproj
@@ -146,6 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="No542.01Matrix.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
