--- a/LeetCodePart1/LeetCodePart1/LeetCodePart1.vcxproj.filters
+++ b/LeetCodePart1/LeetCodePart1/LeetCodePart1.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="No542.01Matrix.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="No258.AddDigits.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
